[gd_scene load_steps=8 format=3 uid="uid://do06amnviaflr"]

[ext_resource type="Theme" uid="uid://d1qd6ity2mdpl" path="res://creator/creator_ui.theme.tres" id="1_ga3ae"]
[ext_resource type="Script" path="res://creator/selection/inspector/primitive/inspector_vector_scalar.gd" id="2_qgccb"]
[ext_resource type="Script" path="res://creator/selection/inspector/primitive/inspector_vector_number.gd" id="3_5be56"]
[ext_resource type="PackedScene" uid="uid://cucd1uacfmy0h" path="res://creator/selection/inspector/primitive/inspector_vector_number.tscn" id="3_pkajk"]
[ext_resource type="Texture2D" uid="uid://dbh6pi6vogo8m" path="res://ui/art/linked.svg" id="5_qqmt3"]
[ext_resource type="PackedScene" uid="uid://cy566ld7k03ue" path="res://creator/selection/inspector/primitive/inspector_reset_button.tscn" id="6_jweq7"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_0vfot"]
size = Vector2(0, 0)

[node name="InspectorPropertyVectorScalar" type="HBoxContainer"]
custom_minimum_size = Vector2(256, 30)
offset_right = 322.0
offset_bottom = 32.0
size_flags_horizontal = 3
theme = ExtResource("1_ga3ae")
theme_override_constants/separation = 0
script = ExtResource("2_qgccb")
label_text = "Name"

[node name="LabelHolder" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2

[node name="Label" type="Label" parent="LabelHolder"]
clip_contents = true
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
size_flags_vertical = 1
text = "Name"
vertical_alignment = 1
clip_text = true

[node name="Content" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="XYZ" type="HBoxContainer" parent="Content"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
script = ExtResource("3_5be56")
label_text = "X"
label_color = Color(0.960784, 0.2, 0.321569, 1)

[node name="LabelHolder" type="MarginContainer" parent="Content/XYZ"]
layout_mode = 2
size_flags_stretch_ratio = 0.5
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2

[node name="Label" type="Label" parent="Content/XYZ/LabelHolder"]
clip_contents = true
custom_minimum_size = Vector2(14, 30)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.960784, 0.2, 0.321569, 1)
text = "X"
vertical_alignment = 1
clip_text = true

[node name="LabelHolderY" type="MarginContainer" parent="Content/XYZ"]
layout_mode = 2
size_flags_stretch_ratio = 0.5
theme_override_constants/margin_left = -5
theme_override_constants/margin_top = 2

[node name="LabelY" type="Label" parent="Content/XYZ/LabelHolderY"]
clip_contents = true
custom_minimum_size = Vector2(14, 30)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.529412, 0.839216, 0.0117647, 1)
text = "Y"
vertical_alignment = 1
clip_text = true

[node name="LabelHolderZ" type="MarginContainer" parent="Content/XYZ"]
layout_mode = 2
size_flags_stretch_ratio = 0.5
theme_override_constants/margin_left = -5
theme_override_constants/margin_top = 2

[node name="LabelZ" type="Label" parent="Content/XYZ/LabelHolderZ"]
clip_contents = true
custom_minimum_size = Vector2(14, 30)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.160784, 0.54902, 0.960784, 1)
text = "Z"
vertical_alignment = 1
clip_text = true

[node name="SpinBoxHolder" type="MarginContainer" parent="Content/XYZ"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpinBox" type="SpinBox" parent="Content/XYZ/SpinBoxHolder"]
layout_mode = 2
theme_override_icons/updown = SubResource("PlaceholderTexture2D_0vfot")
step = 0.001
allow_greater = true
allow_lesser = true
alignment = 1

[node name="X" parent="Content" instance=ExtResource("3_pkajk")]
visible = false
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
label_text = "X"
label_color = Color(0.960784, 0.2, 0.321569, 1)

[node name="Y" parent="Content" instance=ExtResource("3_pkajk")]
visible = false
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
label_text = "Y"
label_color = Color(0.529412, 0.839216, 0.0117647, 1)

[node name="Z" parent="Content" instance=ExtResource("3_pkajk")]
visible = false
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
label_text = "Z"
label_color = Color(0.160784, 0.54902, 0.960784, 1)

[node name="LinkedButton" type="Button" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
icon = ExtResource("5_qqmt3")
flat = true
expand_icon = true

[node name="ResetButton" parent="." instance=ExtResource("6_jweq7")]
layout_mode = 2

[connection signal="value_changed" from="Content/XYZ" to="." method="_on_xyz_value_changed"]
[connection signal="value_preview" from="Content/XYZ" to="." method="_on_xyz_value_preview"]
[connection signal="value_changed" from="Content/X" to="." method="_on_number_field_value_changed"]
[connection signal="value_preview" from="Content/X" to="." method="_on_x_value_preview"]
[connection signal="value_changed" from="Content/Y" to="." method="_on_number_field_value_changed"]
[connection signal="value_preview" from="Content/Y" to="." method="_on_y_value_preview"]
[connection signal="value_changed" from="Content/Z" to="." method="_on_number_field_value_changed"]
[connection signal="value_preview" from="Content/Z" to="." method="_on_z_value_preview"]
[connection signal="pressed" from="LinkedButton" to="." method="_on_linked_button_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
